--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina error</title>
-</head>
-<body>
-    <h1>error 404 Pagina no encontrada  </h1>
-</body>
-</html>
+ <link rel="stylesheet" type="text/css" href="./../static/css/error404.css">
+<div class="container">
+	
+	<div  class="error">
+		<p class="p">4</p>
+		<span class="dracula">			
+			<div class="con">
+				<div class="hair"></div>
+				<div class="hair-r"></div>
+				<div class="head"></div>
+    		<div class="eye"></div>
+    		<div class="eye eye-r"></div>
+  			<div class="mouth"></div>
+  			<div class="blod"></div>
+  			<div class="blod blod2"></div>
+			</div>
+		</span>
+		<p class="p">4</p>
+		
+		<div class="page-ms">
+			<p class="page-msg"> Ups, la página que buscas desapareció</p>
+		<button  href="/habilidades" class="go-back">Ir a inicio</button>
+		</div>
+</div>
+	</div>
+
+<iframe style="width:0;height:0;border:0; border:none;" scrolling="no" frameborder="no" allow="autoplay" src="https://instaud.io/_/2Vvu.mp3"></iframe>
